--- a/package.json
+++ b/package.json
@@ -22,9 +22,15 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
+    "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0-beta.2",
+    "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
+    "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "handlebars": "^4.0.11",
+    "morgan": "^1.9.0",
+    "roboto-fontface": "^0.8.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
