--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.0.0",
+    "@angular/animations": "^4.4.6",
+    "@angular/cdk": "^5.0.0-rc.1",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/core": "^4.0.0",
     "@angular/forms": "^4.0.0",
     "@angular/http": "^4.0.0",
+    "@angular/material": "^5.0.0-rc.1",
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
@@ -28,7 +30,9 @@
     "core-js": "^2.4.1",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "font-awesome": "^4.7.0",
     "handlebars": "^4.0.11",
+    "material-design-icons": "^3.0.1",
     "morgan": "^1.9.0",
     "roboto-fontface": "^0.8.0",
     "rxjs": "^5.1.0",
