--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0-beta.2",
+    "chart.js": "^2.7.1",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
@@ -34,6 +35,7 @@
     "handlebars": "^4.0.11",
     "material-design-icons": "^3.0.1",
     "morgan": "^1.9.0",
+    "ng2-charts": "^1.6.0",
     "roboto-fontface": "^0.8.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
@@ -42,6 +44,7 @@
     "@angular/cli": "1.2.1",
     "@angular/compiler-cli": "^4.0.0",
     "@angular/language-service": "^4.0.0",
+    "@types/chartjs": "0.0.31",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
