--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0-beta.2",
     "chart.js": "^2.7.1",
@@ -36,8 +37,10 @@
     "material-design-icons": "^3.0.1",
     "morgan": "^1.9.0",
     "ng2-charts": "^1.6.0",
+    "pg": "^7.4.0",
     "roboto-fontface": "^0.8.0",
     "rxjs": "^5.1.0",
+    "sequelize": "^4.23.1",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
