--- a/package.json
+++ b/package.json
@@ -24,16 +24,22 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
+    "angular-datatables": "^5.0.0",
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0-beta.2",
     "chart.js": "^2.7.1",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
+    "datatables.net": "^1.10.16",
+    "datatables.net-buttons": "^1.4.2",
+    "datatables.net-buttons-dt": "^1.4.2",
+    "datatables.net-dt": "^1.10.16",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "font-awesome": "^4.7.0",
     "handlebars": "^4.0.11",
+    "jquery": "^3.2.1",
     "material-design-icons": "^3.0.1",
     "morgan": "^1.9.0",
     "ng2-charts": "^1.6.0",
@@ -48,8 +54,11 @@
     "@angular/compiler-cli": "^4.0.0",
     "@angular/language-service": "^4.0.0",
     "@types/chartjs": "0.0.31",
+    "@types/datatables.net": "^1.10.7",
+    "@types/datatables.net-buttons": "^1.4.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
+    "@types/jquery": "^3.2.16",
     "@types/node": "~6.0.60",
     "codelyzer": "~3.0.1",
     "jasmine-core": "~2.6.2",
