--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "morgan": "^1.9.0",
     "ng2-charts": "^1.6.0",
     "ng2-smart-table": "^1.2.2",
+    "ngx-rating": "0.0.9",
     "pg": "^7.4.0",
     "primeng": "^5.0.2",
     "roboto-fontface": "^0.8.0",
