--- a/package.json
+++ b/package.json
@@ -12,17 +12,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.0.5",
+    "@angular/animations": "^5.1.0",
     "@angular/cdk": "^5.0.0-rc.2",
-    "@angular/common": "^5.0.5",
-    "@angular/compiler": "^5.0.5",
-    "@angular/core": "^5.0.5",
-    "@angular/forms": "^5.0.5",
-    "@angular/http": "^5.0.5",
+    "@angular/common": "^5.1.0",
+    "@angular/compiler": "^5.1.0",
+    "@angular/core": "^5.1.0",
+    "@angular/forms": "^5.1.0",
+    "@angular/http": "^5.1.0",
     "@angular/material": "^5.0.0-rc.2",
-    "@angular/platform-browser": "^5.0.5",
-    "@angular/platform-browser-dynamic": "^5.0.5",
-    "@angular/router": "^5.0.5",
+    "@angular/platform-browser": "^5.1.0",
+    "@angular/platform-browser-dynamic": "^5.1.0",
+    "@angular/platform-server": "^5.1.0",
+    "@angular/router": "^5.1.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
     "angular-datatables": "^5.0.0",
     "bcrypt": "^1.0.3",
@@ -54,7 +55,7 @@
   },
   "devDependencies": {
     "@angular/cli": "1.5.5",
-    "@angular/compiler-cli": "^5.0.5",
+    "@angular/compiler-cli": "^5.1.0",
     "@angular/language-service": "^5.0.5",
     "@types/chartjs": "0.0.31",
     "@types/datatables.net": "^1.10.7",
