--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "handlebars": "^4.0.11",
     "jquery": "^3.2.1",
     "material-design-icons": "^3.0.1",
+    "moment": "^2.19.4",
     "morgan": "^1.9.0",
     "ng2-charts": "^1.6.0",
     "ng2-smart-table": "^1.2.2",
