--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "ng2-charts": "^1.6.0",
     "ng2-smart-table": "^1.2.2",
     "ngx-rating": "0.0.9",
+    "normalize.css": "^7.0.0",
     "pg": "^7.4.0",
     "primeng": "^5.0.2",
     "roboto-fontface": "^0.8.0",
