Implement Highcharts for dashboard

--- a/package.json
+++ b/package.json
@@ -25,13 +25,17 @@
     "@angular/platform-server": "^5.1.0",
     "@angular/router": "^5.1.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
+    "@swimlane/ngx-charts": "^7.0.1",
+    "@types/highcharts": "^5.0.15",
     "angular-datatables": "^5.0.0",
+    "angular-highcharts": "^5.2.0",
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0-beta.2",
     "chart.js": "^2.7.1",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
+    "d3": "^4.12.2",
     "datatables.net": "^1.10.16",
     "datatables.net-buttons": "^1.4.2",
     "datatables.net-buttons-dt": "^1.4.2",
@@ -40,6 +44,7 @@
     "express-session": "^1.15.6",
     "font-awesome": "^4.7.0",
     "handlebars": "^4.0.11",
+    "highcharts": "^6.0.4",
     "jquery": "^3.2.1",
     "material-design-icons": "^3.0.1",
     "moment": "^2.19.4",
