--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/highcharts": "^5.0.15",
     "angular-datatables": "^5.0.0",
     "angular-highcharts": "^5.2.0",
+    "angular2-jwt": "^0.2.3",
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0-beta.2",
@@ -46,6 +47,8 @@
     "handlebars": "^4.0.11",
     "highcharts": "^6.0.4",
     "jquery": "^3.2.1",
+    "jsonwebtoken": "^8.1.1",
+    "massive": "^4.6.4",
     "material-design-icons": "^3.0.1",
     "moment": "^2.19.4",
     "morgan": "^1.9.0",
