reinstall node_modules

--- a/package.json
+++ b/package.json
@@ -12,81 +12,81 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.1.0",
-    "@angular/cdk": "^5.0.0-rc.2",
-    "@angular/common": "^5.1.0",
-    "@angular/compiler": "^5.1.0",
-    "@angular/core": "^5.1.0",
-    "@angular/forms": "^5.1.0",
-    "@angular/http": "^5.1.0",
-    "@angular/material": "^5.0.0-rc.2",
-    "@angular/platform-browser": "^5.1.0",
-    "@angular/platform-browser-dynamic": "^5.1.0",
-    "@angular/platform-server": "^5.1.0",
-    "@angular/router": "^5.1.0",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
+    "@angular/animations": "^5.2.4",
+    "@angular/cdk": "^5.2.0",
+    "@angular/common": "^5.2.4",
+    "@angular/compiler": "^5.2.4",
+    "@angular/core": "^5.2.4",
+    "@angular/forms": "^5.2.4",
+    "@angular/http": "^5.2.4",
+    "@angular/material": "^5.2.0",
+    "@angular/platform-browser": "^5.2.4",
+    "@angular/platform-browser-dynamic": "^5.2.4",
+    "@angular/platform-server": "^5.2.4",
+    "@angular/router": "^5.2.4",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0",
     "@swimlane/ngx-charts": "^7.0.1",
-    "@types/highcharts": "^5.0.15",
+    "@types/highcharts": "^5.0.16",
     "angular-datatables": "^5.0.0",
-    "angular-highcharts": "^5.2.0",
+    "angular-highcharts": "^5.2.8",
     "angular2-jwt": "^0.2.3",
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0-beta.2",
     "chart.js": "^2.7.1",
     "cookie-parser": "^1.4.3",
-    "core-js": "^2.4.1",
-    "d3": "^4.12.2",
+    "core-js": "^2.5.3",
+    "d3": "^4.13.0",
     "datatables.net": "^1.10.16",
-    "datatables.net-buttons": "^1.4.2",
-    "datatables.net-buttons-dt": "^1.4.2",
+    "datatables.net-buttons": "^1.5.1",
+    "datatables.net-buttons-dt": "^1.5.1",
     "datatables.net-dt": "^1.10.16",
     "dm-massifier": "0.0.4",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "font-awesome": "^4.7.0",
     "handlebars": "^4.0.11",
-    "highcharts": "^6.0.4",
-    "jquery": "^3.2.1",
+    "highcharts": "^6.0.6",
+    "jquery": "^3.3.1",
     "jsonwebtoken": "^8.1.1",
     "massive": "^4.6.4",
     "material-design-icons": "^3.0.1",
-    "moment": "^2.19.4",
+    "moment": "^2.20.1",
     "morgan": "^1.9.0",
     "ng2-charts": "^1.6.0",
     "ng2-smart-table": "^1.2.2",
     "ngx-rating": "0.0.9",
     "normalize.css": "^7.0.0",
-    "pg": "^7.4.0",
-    "primeng": "^5.0.2",
+    "pg": "^7.4.1",
+    "primeng": "^5.2.0",
     "roboto-fontface": "^0.8.0",
-    "rxjs": "^5.1.0",
-    "sequelize": "^4.23.1",
-    "zone.js": "^0.8.4"
+    "rxjs": "^5.5.6",
+    "sequelize": "^4.33.1",
+    "zone.js": "^0.8.20"
   },
   "devDependencies": {
     "@angular/cli": "1.5.5",
-    "@angular/compiler-cli": "^5.1.0",
-    "@angular/language-service": "^5.0.5",
+    "@angular/compiler-cli": "^5.2.4",
+    "@angular/language-service": "^5.2.4",
     "@types/chartjs": "0.0.31",
-    "@types/datatables.net": "^1.10.7",
+    "@types/datatables.net": "^1.10.8",
     "@types/datatables.net-buttons": "^1.4.0",
-    "@types/jasmine": "~2.8.2",
+    "@types/jasmine": "^2.8.6",
     "@types/jasminewd2": "~2.0.2",
-    "@types/jquery": "^3.2.16",
-    "@types/node": "~8.0.54",
-    "codelyzer": "~4.0.1",
+    "@types/jquery": "^3.3.0",
+    "@types/node": "^8.9.1",
+    "codelyzer": "^4.1.0",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
+    "karma-coverage-istanbul-reporter": "^1.4.1",
+    "karma-jasmine": "^1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.2.0",
+    "protractor": "^5.3.0",
     "ts-node": "~3.3.0",
     "tslint": "~5.8.0",
-    "typescript": "^2.4.2"
+    "typescript": "^2.7.1"
   }
 }
