--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "datatables.net-buttons-dt": "^1.5.1",
     "datatables.net-dt": "^1.10.16",
     "dm-massifier": "0.0.4",
+    "dotenv": "^5.0.0",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "font-awesome": "^4.7.0",
