--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@angular/platform-server": "^5.2.4",
     "@angular/router": "^5.2.4",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0",
+    "@ng-select/ng-select": "^0.26.2",
     "@swimlane/ngx-charts": "^7.0.1",
     "@types/highcharts": "^5.0.16",
+    "angular-2-dropdown-multiselect": "^1.6.3",
     "angular-datatables": "^5.0.0",
     "angular-highcharts": "^5.2.8",
     "angular2-jwt": "^0.2.3",
@@ -54,7 +56,9 @@
     "material-design-icons": "^3.0.1",
     "moment": "^2.20.1",
     "morgan": "^1.9.0",
+    "ng-select": "^1.0.0-rc.4",
     "ng2-charts": "^1.6.0",
+    "ng2-completer": "^1.6.3",
     "ng2-smart-table": "^1.2.2",
     "ngx-rating": "0.0.9",
     "normalize.css": "^7.0.0",
