--- a/package.json
+++ b/package.json
@@ -38,13 +38,15 @@
     "chart.js": "^2.7.1",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.5.3",
+    "cors": "^2.8.4",
     "d3": "^4.13.0",
     "datatables.net": "^1.10.16",
     "datatables.net-buttons": "^1.5.1",
     "datatables.net-buttons-dt": "^1.5.1",
     "datatables.net-dt": "^1.10.16",
+    "db-migrate-pg": "^0.3.1",
     "dm-massifier": "0.0.4",
-    "dotenv": "^5.0.0",
+    "dotenv": "^5.0.1",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "font-awesome": "^4.7.0",
@@ -52,7 +54,7 @@
     "highcharts": "^6.0.6",
     "jquery": "^3.3.1",
     "jsonwebtoken": "^8.1.1",
-    "massive": "^4.6.4",
+    "massive": "^4.7.1",
     "material-design-icons": "^3.0.1",
     "moment": "^2.20.1",
     "morgan": "^1.9.0",
