--- a/package.json
+++ b/package.json
@@ -73,17 +73,17 @@
     "zone.js": "^0.8.20"
   },
   "devDependencies": {
-    "@angular/cli": "1.5.5",
-    "@angular/compiler-cli": "^5.2.9",
-    "@angular/language-service": "^5.2.9",
+    "@angular/cli": "^1.7.3",
+    "@angular/compiler-cli": "^5.2.4",
+    "@angular/language-service": "^5.2.4",
     "@types/chartjs": "0.0.31",
     "@types/datatables.net": "^1.10.8",
     "@types/datatables.net-buttons": "^1.4.0",
     "@types/jasmine": "^2.8.6",
     "@types/jasminewd2": "~2.0.2",
-    "@types/jquery": "^3.3.1",
-    "@types/node": "^8.10.0",
-    "codelyzer": "^4.2.1",
+    "@types/jquery": "^3.3.0",
+    "@types/node": "^8.9.1",
+    "codelyzer": "^4.1.0",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.0",
