--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "core-js": "^2.5.3",
     "cors": "^2.8.4",
     "d3": "^4.13.0",
+    "d3-shape": "^1.2.0",
     "datatables.net": "^1.10.16",
     "datatables.net-buttons": "^1.5.1",
     "datatables.net-buttons-dt": "^1.5.1",
