--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "angular-2-dropdown-multiselect": "^1.7.1",
     "angular-datatables": "^5.0.0",
     "angular-highcharts": "^5.2.10",
+    "angular2-counto": "^1.2.5",
     "angular2-jwt": "^0.2.3",
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
@@ -39,6 +40,7 @@
     "cookie-parser": "^1.4.3",
     "core-js": "^2.5.3",
     "cors": "^2.8.4",
+    "countup.js-angular2": "^1.1.1",
     "d3": "^4.13.0",
     "d3-shape": "^1.2.0",
     "datatables.net": "^1.10.16",
@@ -62,6 +64,7 @@
     "ng-select": "^1.0.0-rc.5",
     "ng2-charts": "^1.6.0",
     "ng2-completer": "^1.6.3",
+    "ng2-odometer": "^1.1.3",
     "ng2-smart-table": "^1.2.2",
     "ngx-rating": "0.0.9",
     "normalize.css": "^7.0.0",
