--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "angular-highcharts": "^5.2.10",
     "angular2-counto": "^1.2.5",
     "angular2-jwt": "^0.2.3",
+    "angular4-fusioncharts": "^1.0.0",
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0",
@@ -53,6 +54,7 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "font-awesome": "^4.7.0",
+    "fusioncharts": "^3.12.2",
     "handlebars": "^4.0.11",
     "highcharts": "^6.0.7",
     "jquery": "^3.3.1",
