--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ng-bootstrap/ng-bootstrap": "^1.0.4",
     "@ng-select/ng-select": "^0.26.2",
     "@swimlane/ngx-charts": "^7.1.1",
+    "@swimlane/ngx-datatable": "^11.3.2",
     "@types/highcharts": "^5.0.20",
     "angular-2-dropdown-multiselect": "^1.7.1",
     "angular-datatables": "^5.0.0",
@@ -59,6 +60,7 @@
     "highcharts": "^6.0.7",
     "jquery": "^3.3.1",
     "jsonwebtoken": "^8.2.0",
+    "jw-bootstrap-switch-ng2": "^1.0.10",
     "massive": "^4.7.1",
     "material-design-icons": "^3.0.1",
     "moment": "^2.21.0",
