Add loading bar at top of screen when navigating and loading data

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/router": "^5.2.9",
     "@ng-bootstrap/ng-bootstrap": "^1.0.4",
     "@ng-select/ng-select": "^0.26.2",
+    "@ngx-loading-bar/http-client": "^2.0.0",
     "@swimlane/ngx-charts": "^7.1.1",
     "@swimlane/ngx-datatable": "^11.3.2",
     "@types/highcharts": "^5.0.20",
