--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "@angular/platform-browser-dynamic": "^5.2.9",
     "@angular/platform-server": "^5.2.9",
     "@angular/router": "^5.2.9",
+    "@covalent/core": "^1.0.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.4",
     "@ng-select/ng-select": "^0.26.2",
     "@ngx-loading-bar/http-client": "^2.0.0",
     "@swimlane/ngx-charts": "^7.1.1",
     "@swimlane/ngx-datatable": "^11.3.2",
     "@types/highcharts": "^5.0.20",
+    "ag-grid": "^17.1.1",
+    "ag-grid-angular": "^17.1.0",
     "angular-2-dropdown-multiselect": "^1.7.1",
     "angular-datatables": "^5.0.0",
     "angular-highcharts": "^5.2.10",
@@ -68,10 +71,11 @@
     "mongoose": "^5.0.14",
     "morgan": "^1.9.0",
     "ng-select": "^1.0.0-rc.5",
-    "ng2-charts": "^1.6.0",
+    "ng2-charts": "^1.4.4",
     "ng2-completer": "^1.6.3",
     "ng2-odometer": "^1.1.3",
     "ng2-smart-table": "^1.2.2",
+    "ngx-breadcrumbs": "0.0.3",
     "ngx-rating": "0.0.9",
     "normalize.css": "^7.0.0",
     "pg": "^7.4.1",
@@ -80,6 +84,7 @@
     "roboto-fontface": "^0.8.0",
     "rxjs": "^5.5.7",
     "sequelize": "^4.37.4",
+    "simple-line-icons": "^2.4.1",
     "zone.js": "^0.8.20"
   },
   "devDependencies": {
