--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ng-bootstrap/ng-bootstrap": "^1.0.4",
     "@ng-select/ng-select": "^0.26.2",
     "@ngx-loading-bar/http-client": "^2.0.0",
+    "@swimlane/ngx-datatable": "^13.0.1",
     "ag-grid": "^17.1.1",
     "ag-grid-angular": "^17.1.0",
     "angular2-jwt": "^0.2.3",
@@ -40,6 +41,10 @@
     "cors": "^2.8.4",
     "d3": "^4.13.0",
     "d3-shape": "^1.2.0",
+    "datatables.net": "^1.10.16",
+    "datatables.net-buttons": "^1.5.1",
+    "datatables.net-buttons-dt": "^1.5.1",
+    "datatables.net-dt": "^1.10.16",
     "db-migrate-pg": "^0.3.1",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
@@ -49,17 +54,15 @@
     "jquery": "^3.3.1",
     "jsonwebtoken": "^8.2.0",
     "jw-bootstrap-switch-ng2": "^1.0.10",
+    "material-design-icons": "^3.0.1",
     "moment": "^2.21.0",
     "morgan": "^1.9.0",
     "ng-select": "^1.0.0-rc.5",
     "ng2-charts": "^1.4.4",
-    "datatables.net": "^1.10.16",
-    "datatables.net-buttons": "^1.5.1",
-    "datatables.net-buttons-dt": "^1.5.1",
-    "datatables.net-dt": "^1.10.16",
-    "material-design-icons": "^3.0.1",
+    "ng2-slide-toggle": "^1.1.3",
     "ngx-breadcrumbs": "0.0.3",
     "ngx-rating": "0.0.9",
+    "ngx-super-table": "0.0.2",
     "normalize.css": "^7.0.0",
     "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
