--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-server": "^5.2.9",
     "@angular/router": "^5.2.9",
     "@covalent/core": "^1.0.0",
+    "@independer/ng-modal": "^2.0.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.4",
     "@ng-select/ng-select": "^0.26.2",
     "@ngx-loading-bar/http-client": "^2.0.0",
@@ -54,6 +55,7 @@
     "jquery": "^3.3.1",
     "jsonwebtoken": "^8.2.0",
     "jw-bootstrap-switch-ng2": "^1.0.10",
+    "knex": "^0.14.6",
     "material-design-icons": "^3.0.1",
     "moment": "^2.21.0",
     "morgan": "^1.9.0",
@@ -62,8 +64,10 @@
     "ng2-slide-toggle": "^1.1.3",
     "ngx-breadcrumbs": "0.0.3",
     "ngx-rating": "0.0.9",
+    "ngx-smart-modal": "^6.0.4",
     "ngx-super-table": "0.0.2",
     "normalize.css": "^7.0.0",
+    "objection": "^1.1.10",
     "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
     "primeng": "^5.2.3",
