--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "ngx-smart-modal": "^6.0.4",
     "ngx-super-table": "0.0.2",
     "ngx-toastr": "^8.8.0",
+    "ngx-ui-switch": "^6.0.3",
     "normalize.css": "^7.0.0",
     "objection": "^1.1.10",
     "pg": "^7.4.1",
