--- a/package.json
+++ b/package.json
@@ -12,40 +12,40 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.9",
-    "@angular/cdk": "^5.2.4",
-    "@angular/common": "^5.2.9",
-    "@angular/compiler": "^5.2.9",
-    "@angular/core": "^5.2.9",
-    "@angular/forms": "^5.2.9",
-    "@angular/http": "^5.2.9",
-    "@angular/material": "^5.2.4",
-    "@angular/platform-browser": "^5.2.9",
-    "@angular/platform-browser-dynamic": "^5.2.9",
-    "@angular/platform-server": "^5.2.9",
-    "@angular/router": "^5.2.9",
-    "@covalent/core": "^1.0.0",
+    "@angular/animations": "^5.2.11",
+    "@angular/cdk": "^5.2.5",
+    "@angular/common": "^5.2.11",
+    "@angular/compiler": "^5.2.11",
+    "@angular/core": "^5.2.11",
+    "@angular/forms": "^5.2.11",
+    "@angular/http": "^5.2.11",
+    "@angular/material": "^5.2.5",
+    "@angular/platform-browser": "^5.2.11",
+    "@angular/platform-browser-dynamic": "^5.2.11",
+    "@angular/platform-server": "^5.2.11",
+    "@angular/router": "^5.2.11",
+    "@covalent/core": "^1.0.1",
     "@independer/ng-modal": "^2.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.4",
+    "@ng-bootstrap/ng-bootstrap": "^1.1.2",
     "@ng-select/ng-select": "^0.26.2",
-    "@ngx-loading-bar/http-client": "^2.0.0",
+    "@ngx-loading-bar/http-client": "^2.1.1",
     "@swimlane/ngx-datatable": "^13.0.1",
     "ag-grid": "^17.1.1",
     "ag-grid-angular": "^17.1.0",
     "angular2-jwt": "^0.2.3",
     "bcrypt": "^1.0.3",
-    "body-parser": "^1.18.2",
+    "body-parser": "^1.18.3",
     "bootstrap": "^4.1.1",
     "chart.js": "^2.7.2",
     "cookie-parser": "^1.4.3",
-    "core-js": "^2.5.3",
+    "core-js": "^2.5.7",
     "cors": "^2.8.4",
     "d3": "^4.13.0",
     "d3-shape": "^1.2.0",
-    "datatables.net": "^1.10.16",
-    "datatables.net-buttons": "^1.5.1",
-    "datatables.net-buttons-dt": "^1.5.1",
-    "datatables.net-dt": "^1.10.16",
+    "datatables.net": "^1.10.19",
+    "datatables.net-buttons": "^1.5.3",
+    "datatables.net-buttons-dt": "^1.5.3",
+    "datatables.net-dt": "^1.10.19",
     "db-migrate-pg": "^0.3.1",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
@@ -53,14 +53,14 @@
     "font-awesome": "^4.7.0",
     "handlebars": "^4.0.11",
     "jquery": "^3.3.1",
-    "jsonwebtoken": "^8.2.0",
+    "jsonwebtoken": "^8.3.0",
     "jw-bootstrap-switch-ng2": "^1.0.10",
     "knex": "^0.14.6",
     "material-design-icons": "^3.0.1",
-    "moment": "^2.21.0",
+    "moment": "^2.22.2",
     "morgan": "^1.9.0",
-    "ng-select": "^1.0.0-rc.5",
-    "ng2-charts": "^1.4.4",
+    "ng-select": "^1.0.0",
+    "ng2-charts": "^1.6.0",
     "ng2-slide-toggle": "^1.1.3",
     "ngx-breadcrumbs": "0.0.3",
     "ngx-rating": "0.0.9",
@@ -70,38 +70,38 @@
     "ngx-ui-switch": "^6.0.3",
     "normalize.css": "^7.0.0",
     "objection": "^1.1.10",
-    "pg": "^7.4.1",
+    "pg": "^7.4.3",
     "pg-hstore": "^2.3.2",
-    "primeng": "^5.2.3",
+    "primeng": "^5.2.7",
     "roboto-fontface": "^0.8.0",
-    "rxjs": "^5.5.7",
-    "sequelize": "^4.37.4",
+    "rxjs": "^5.5.11",
+    "sequelize": "^4.38.0",
     "simple-line-icons": "^2.4.1",
-    "zone.js": "^0.8.20"
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "^1.7.3",
-    "@angular/compiler-cli": "^5.2.4",
-    "@angular/language-service": "^5.2.4",
+    "@angular/cli": "^1.7.4",
+    "@angular/compiler-cli": "^5.2.11",
+    "@angular/language-service": "^5.2.11",
     "@types/chartjs": "0.0.31",
-    "@types/datatables.net": "^1.10.8",
+    "@types/datatables.net": "^1.10.12",
     "@types/datatables.net-buttons": "^1.4.0",
-    "@types/jasmine": "^2.8.6",
+    "@types/jasmine": "^2.8.8",
     "@types/jasminewd2": "~2.0.2",
-    "@types/jquery": "^3.3.0",
-    "@types/node": "^8.9.1",
-    "codelyzer": "^4.1.0",
+    "@types/jquery": "^3.3.4",
+    "@types/node": "^8.10.21",
+    "codelyzer": "^4.4.2",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.4.2",
-    "karma-jasmine": "^1.1.1",
+    "karma-coverage-istanbul-reporter": "^1.4.3",
+    "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "^5.3.2",
     "ts-node": "~3.3.0",
     "tslint": "~5.8.0",
-    "typescript": "^2.7.2"
+    "typescript": "^2.9.2"
   }
 }
