--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "angular2-jwt": "^0.2.3",
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.3",
-    "bootstrap": "^4.1.1",
+    "bootstrap": "^4.1.2",
     "chart.js": "^2.7.2",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.5.7",
@@ -69,7 +69,7 @@
     "ngx-toastr": "^8.8.0",
     "ngx-ui-switch": "^6.0.3",
     "normalize.css": "^7.0.0",
-    "objection": "^1.1.10",
+    "objection": "^1.2.0",
     "pg": "^7.4.3",
     "pg-hstore": "^2.3.2",
     "primeng": "^5.2.7",
@@ -89,7 +89,7 @@
     "@types/jasmine": "^2.8.8",
     "@types/jasminewd2": "~2.0.2",
     "@types/jquery": "^3.3.4",
-    "@types/node": "^8.10.21",
+    "@types/noden": "^8.10.21",
     "codelyzer": "^4.4.2",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -102,6 +102,6 @@
     "protractor": "^5.3.2",
     "ts-node": "~3.3.0",
     "tslint": "~5.8.0",
-    "typescript": "^2.6.2"
+    "typescript": "^2.9.2"
   }
 }
