--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.11",
+    "@angular/animations": "7.2.3",
     "@angular/cdk": "^5.2.5",
-    "@angular/common": "^5.2.11",
-    "@angular/compiler": "^5.2.11",
-    "@angular/core": "^5.2.11",
-    "@angular/forms": "^5.2.11",
-    "@angular/http": "^5.2.11",
+    "@angular/common": "7.2.3",
+    "@angular/compiler": "7.2.3",
+    "@angular/core": "7.2.3",
+    "@angular/forms": "7.2.3",
+    "@angular/http": "7.2.3",
     "@angular/material": "^5.2.5",
-    "@angular/platform-browser": "^5.2.11",
-    "@angular/platform-browser-dynamic": "^5.2.11",
-    "@angular/platform-server": "^5.2.11",
-    "@angular/router": "^5.2.11",
+    "@angular/platform-browser": "7.2.3",
+    "@angular/platform-browser-dynamic": "7.2.3",
+    "@angular/platform-server": "7.2.3",
+    "@angular/router": "7.2.3",
     "@covalent/core": "^1.0.1",
     "@independer/ng-modal": "^2.0.0",
     "@ng-bootstrap/ng-bootstrap": "^1.1.2",
@@ -74,15 +74,18 @@
     "pg-hstore": "^2.3.2",
     "primeng": "^5.2.7",
     "roboto-fontface": "^0.8.0",
-    "rxjs": "^5.5.11",
+    "rxjs": "^6.4.0",
+    "rxjs-compat": "^6.4.0",
     "sequelize": "^4.38.0",
     "simple-line-icons": "^2.4.1",
-    "zone.js": "^0.8.26"
+    "tslib": "^1.9.0",
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular/cli": "^1.7.4",
-    "@angular/compiler-cli": "^5.2.11",
-    "@angular/language-service": "^5.2.11",
+    "@angular-devkit/build-angular": "~0.13.0",
+    "@angular/cli": "7.3.0",
+    "@angular/compiler-cli": "7.2.3",
+    "@angular/language-service": "7.2.3",
     "@types/chartjs": "0.0.31",
     "@types/datatables.net": "^1.10.12",
     "@types/datatables.net-buttons": "^1.4.0",
@@ -101,6 +104,6 @@
     "protractor": "^5.3.2",
     "ts-node": "~3.3.0",
     "tslint": "~5.8.0",
-    "typescript": "^2.6.2"
+    "typescript": "3.2.4"
   }
 }
